<resources>
    <string name="app_name">Movie</string>
    <string name="edit_movie">Edit movie</string>
    <string name="favorite">favorite</string>
    <string name="poster">poster</string>
    <string name="back">back</string>
    <string name="icon">icon</string>
    <string name="site">Site</string>
    <string name="actors">Actors</string>
    <string name="company">Companies</string>
    <string name="imdb">imdb</string>
    <string name="budget">Budget</string>
    <string name="eightteen_plus">Eightteen Plus</string>
    <string name="favorite_selected">Favorite Selected</string>
</resources>